--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img class="top-cloud" src="cloud.png" alt="cloud-image">
     <h1 class="name">It's Divyansh.</h1>
     <p class="name">a <span class="pro">pro</span>grammer.</p>
-    <img class="bottom-cloud" src="CSS - My Site Images/cloud.png" alt="cloud-image">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
     <img src="mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
