--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="CSS - My Site Images/cloud.png" alt="cloud-image">
     <h1 class="name">It's Divyansh.</h1>
-    <p class="name">a <span class="pro">pro</span>grammer.</p>
-    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
-    <img src="mountain.png" alt="mountain-image">
+    <p class="name">a <u>pro</u>grammer.</p>
+    <img class="bottom-cloud" src="CSS - My Site Images/cloud.png" alt="cloud-image">
+    <img src="CSS - My Site Images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
       <img class="myimg" src="My Image.png" alt="Owner Image">
-      <h2>Hello.</h2>
+      <h2> Hello.</h2>
       <p>My name is Divyansh Patni. I am from india And I am a programmer.</p>
     </div>
     <hr>
@@ -38,7 +38,7 @@
         <p>I am a java programmer. And java is one of my skills and i know java very well.</p>
       </div>
       <div class="skill-row">
-        <iframe src="https://giphy.com/embed/YQitE4YNQNahy"> </iframe>
+        <iframe src="https://giphy.com/embed/YQitE4YNQNahy"> </iframe><hr>
 
         <h3>Design of website</h3>
         <p>
@@ -49,7 +49,7 @@
     </div>
     <hr>
     <div class="contact-me">
-      <h2>Get In Touch</h2>
+      <h2 clas>Get In Touch</h2>
       <h3>Guys you have any problem or doubt related to programming and designing you can contact me.</h3>
       <a href="divyanshpatni24@gmail.com">CONTACT ME</a>
     </div>
