--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="CSS - My Site Images/cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="cloud.png" alt="cloud-image">
     <h1 class="name">It's Divyansh.</h1>
     <p class="name">a <u>pro</u>grammer.</p>
-    <img class="bottom-cloud" src="CSS - My Site Images/cloud.png" alt="cloud-image">
-    <img src="CSS - My Site Images/mountain.png" alt="mountain-image">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
+    <img src="mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
