--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Divyansh Patni</title>
   <link rel="stylesheet" href="Styles.css">
   <link rel="icon" href="favicon.ico?v=2">
@@ -17,48 +18,48 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="cloud.png" alt="cloud-image">
+    <img class="top-cloud" src="CSS - My Site Images/cloud.png" alt="cloud-image">
     <h1 class="name">It's Divyansh.</h1>
     <p class="name">a <u>pro</u>grammer.</p>
-    <img class="bottom-cloud" src="cloud.png" alt="cloud-image">
-    <img src="mountain.png" alt="mountain-image">
+    <img class="bottom-cloud" src="CSS - My Site Images/cloud.png" alt="cloud-image">
+    <img src="CSS - My Site Images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="myimg" src="My Image.png" alt="Owner Image">
-      <h2> Hello.</h2>
+      <img class="myimg" src="My Photo..jpeg" alt="Owner Image">
+      <h2>Hello!</h2>
       <p>My name is Divyansh Patni. I am from india And I am a programmer.</p>
+      <p>And I also design and develop websites for the users.</p><br>
     </div>
-    <hr>
+    
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h3 class="h33">My Skills.</h3>
       <div class="skill-row">
-        <img class="myimg" src="java.png" alt="Skill Image">
+        <img class="javaimg" src="java.png" alt="Skill Image">
         <h3>JAVA</h3>
-        <p>I am a java programmer. And java is one of my skills and i know java very well.</p>
+        <p>I am a java programmer. And java is one of my skills and i know java very well.</p><br><br>
       </div>
       <div class="skill-row">
-        <iframe src="https://giphy.com/embed/YQitE4YNQNahy"> </iframe><hr>
+        <iframe class="giphy" src="https://giphy.com/embed/YQitE4YNQNahy"> </iframe>
 
-        <h3>Design of website</h3>
+        <h3>Design And Development</h3>
         <p>
           I am also a designer of website. And i know languages like HTML, CSS, Javascript and many more that is used to
           design a website.
         </p>
       </div>
     </div>
-    <hr>
     <div class="contact-me">
       <h2 clas>Get In Touch</h2>
-      <h3>Guys you have any problem or doubt related to programming and designing you can contact me.</h3>
-      <a href="divyanshpatni24@gmail.com">CONTACT ME</a>
+      <h3>Guys you have any problem or doubt related to programming and designing you can contact me.</h3><br>
+      <a class="btn" href="mailto: divyanshpatni24@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/divyansh-patni-83a3a1195">LinkedIn</a>
-    <p>© Divyansh Patni</p>
+    <p class="copywrite">© 2022 Divyansh Patni</p>
   </div>
 
 </body>
